--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,9 +5,15 @@ spring:
     name: leaveRequestSystem
   datasource:
     url: jdbc:postgresql://localhost:8081/vacations
-    username: yourName
-    password: yourPassword
+    username: <YOUR_NAME>
+    password: <YOUR_PASSWORD>
     driver-class-name: org.postgresql.Driver
+    initialization-mode: always
+#  datasource:
+#    url: jdbc:h2:mem:mydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#    username: sa
+#    password:
+#    driverClassName: org.h2.Driver
   h2:
     console:
       enabled: true
@@ -18,5 +24,29 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+        show-sql: true
   profiles:
     include: local
+  security:
+    oauth2:
+      client:
+        registration:
+          github:
+            client-id: <YOUR_CLIENT_ID>
+            client-secret: <YOUR_CLIENT_SECRET>
+            scope:
+              - read:user
+              - user:email
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+            authorization-grant-type: authorization_code
+        provider:
+          github:
+            authorization-uri: https://github.com/login/oauth/authorize
+            token-uri: https://github.com/login/oauth/access_token
+            user-info-uri: https://api.github.com/user
+            user-name-attribute: id
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
