1. Dodanie endpointu createLeaveRequest 2. RequestControllerAdvice 3. Polepszenie struktury (klasy do pakietów)

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -50,5 +50,7 @@ logging:
       hibernate:
         SQL: DEBUG
         type.descriptor.sql.BasicBinder: TRACE
-    root: DEBUG
+#    root: DEBUG
+#spring.jpa.defer-datasource-initialization=true
+
 
