--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,18 @@
 <!--			<groupId>org.springframework.session</groupId>-->
 <!--			<artifactId>spring-session-jdbc</artifactId>-->
 <!--		</dependency>-->
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.17.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
