--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,5 +3,5 @@ databaseChangeLog:
       file: db/changelog/changeset/create-table-authorities.yaml
   - include:
       file: db/changelog/changeset/insert-authorities.yaml
-  - include:
-      file: db/changelog/changeset/insert-user-with-role-manager-.yaml
+#  - include:
+#      file: db/changelog/changeset/insert-user-with-role-manager-.yaml
