--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -55,8 +55,8 @@ logging:
       iodkovskaya:
         leaveRequestSystem:
           service: INFO
-  file:
-    name: logs/vacation_balance.log
+#  file:
+#    name: logs/vacation_balance.log
 #    root: DEBUG
 #spring.jpa.defer-datasource-initialization=true
 
