--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -9,3 +9,5 @@ databaseChangeLog:
       file: db/changelog/changeset/create-table-vacation-balances.yaml
   - include:
       file: db/changelog/changeset/create-table-requests.yaml
+  - include:
+      file: db/changelog/changeset/create-session-table.yaml
