--- a/pom.xml
+++ b/pom.xml
@@ -79,11 +79,10 @@
             <artifactId>liquibase-core</artifactId>
             <version>4.20.0</version>
         </dependency>
-        <!--		<dependency>-->
-        <!--			<groupId>org.springframework.session</groupId>-->
-        <!--			<artifactId>spring-session-jdbc</artifactId>-->
-        <!--		</dependency>-->
-
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-jdbc</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
@@ -99,7 +98,6 @@
             <version>2.9.3</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
 
