1. Realizacja zarządzania ruchem sieciowym przez NGINX 2. Dodanie Dockerfile 3. Dodanie docker-compose.yml 4. Konfiguracja

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,22 @@
-server {
-    listen 80;
+events {
+        worker_connections 1024;
+}
+http{
 
-    location / {
-        proxy_pass http://java-app:8787;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    upstream spring_app {
+        server 127.0.0.1:8787;
+        server 127.0.0.1:8889;
+    }
+
+    server {
+        listen 80;
+        server_name example.com;
+
+        location / {
+            proxy_pass http://spring_app;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
     }
 }
