--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,21 @@
 version: '3.9'
+
 services:
   java-app:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8787:8787"
+      - "8099"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/mydatabase
       - SPRING_DATASOURCE_USERNAME=myuser
       - SPRING_DATASOURCE_PASSWORD=mypassword
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+    deploy:
+      replicas: 2
 
   db:
     image: postgres:15
@@ -24,13 +28,18 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U myuser -d mydatabase"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   nginx:
     image: nginx:latest
     ports:
-      - "80:80"
+      - "8082:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - java-app
 
