--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,7 @@ http{
     upstream spring_app {
         server 127.0.0.1:8787;
         server 127.0.0.1:8889;
+        server 127.0.0.1:8888;
     }
 
     server {
