--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
             <version>2.9.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jobrunr</groupId>
+            <artifactId>jobrunr-spring-boot-3-starter</artifactId>
+            <version>6.3.5</version>
+        </dependency>
+
     </dependencies>
 
 
