--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "8099"
+#    ports:
+#      - "8099"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/mydatabase
       - SPRING_DATASOURCE_USERNAME=myuser
@@ -37,7 +37,7 @@ services:
   nginx:
     image: nginx:latest
     ports:
-      - "8082:80"
+      - "8089:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
