--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
   datasource:
     username: <YOUR_USERNAME>
     password: <YOUR_PASSWORD>>
-    url: jdbc:postgresql://localhost:8081/vacations
+    url: jdbc:postgresql://localhost:5432/vacations_requests
 #    url: jdbc:postgresql://db:5432/mydatabase
     driver-class-name: org.postgresql.Driver
   jpa:
@@ -56,7 +56,6 @@ logging:
 vacation:
   increment:
     cron: "0 0 0 * * *"
-#    cron = "0 45 10 * * *"
 #    root: DEBUG
 #spring.jpa.defer-datasource-initialization=true
 org:
