--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,10 @@
 events {
-        worker_connections 1024;
+    worker_connections 1024;
 }
-http{
 
+http {
     upstream spring_app {
-        server 127.0.0.1:8787;
-        server 127.0.0.1:8889;
-        server 127.0.0.1:8888;
+        server java-app:8089;
     }
 
     server {
