1. Dodanie Apache License 2.0

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,8 +6,8 @@ spring:
   datasource:
     username: <YOUR_USERNAME>
     password: <YOUR_PASSWORD>
-    url: jdbc:postgresql://postgres:5432/vacations_requests
-#    url: jdbc:postgresql://localhost:5432/vacations_requests
+#    url: jdbc:postgresql://postgres:5432/vacations_requests
+    url: jdbc:postgresql://localhost:5432/vacations_requests
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
